syntax = 'proto3';
package trac.metadata;

option java_package = "com.accenture.trac.common.metadata";
option java_multiple_files = true;


enum PrimitiveType {
    NONE_TYPE = 0;
    BOOLEAN = 1;
    INTEGER = 2;
    FLOAT = 3;
    DECIMAL = 4;
    STRING = 5;
    DATE = 6;
    DATETIME = 7;
    ARRAY = 8;
    OBJECT = 9;
}

message Decimal {

    bytes rawBytes = 1;
    uint32 precision = 2;
    sint32 scale = 3;
}

message Date {

    // TODO
}

message DateTime {

    // TODO (includes tz)
}

message PrimitiveValue {

    PrimitiveType type = 1;

    oneof value {

        bool booleanValue = 2;
        sint64 integerValue = 3;
        double floatValue = 4;
        Decimal decimalValue = 5;
        string stringValue = 6;
        Date dateValue = 7;
        DateTime datetimeValue = 8;
    }
}

message PrimitiveArray {

    PrimitiveType arrayType = 1;

    repeated PrimitiveValue items = 2;
}

message PrimitiveObject {

    map<string, PrimitiveValue> items = 1;
}